# live555helper

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  testRtspClient.cpp  testSdpClient.cpp
.github/workflows/: ccpp.yml  cpp-windows.yaml
inc/: MediaSessionHelper.h  SessionSink.h  environment.h  mkvclient.h  rtspconnectionclient.h  sdpclient.h
src/: MediaSessionHelper.cpp  SessionSink.cpp  environment.cpp  mkvclient.cpp  rtspconnectionclient.cpp  sdpclient.cpp
